# coverage_report

./: CMakeLists.txt  README.md
cmake/: AddUnitTest.cmake  CoverageReport.cmake  ZeroCoverageCounters.cmake
coverage_report/: CMakeLists.txt
coverage_report/intergration_test_coverage/: CMakeLists.txt
coverage_report/total_test_coverage/: CMakeLists.txt
coverage_report/unit_test_coverage/: CMakeLists.txt
integration_tests/: CMakeLists.txt  main.cpp
libA/: CMakeLists.txt  factorial.cpp  settings.cpp  settings.h
unit_tests/: CMakeLists.txt  test_factorial.cpp
